# fastpaper-cli

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  README.zh-CN.md  dist-workspace.toml
.agents/skills/tdd/: SKILL.md  deep-modules.md  interface-design.md  mocking.md  refactoring.md  tests.md
.github/workflows/: publish-crates.yml  release.yml
skills/fastpaper/: SKILL.md
src/: cli.rs  download.rs  identifier.rs  lib.rs  main.rs  output.rs  read.rs
src/sources/: arxiv.rs  biorxiv.rs  core.rs  crossref.rs  dblp.rs  doaj.rs  europepmc.rs  hal.rs  medrxiv.rs  mod.rs  openaire.rs  openalex.rs  pmc.rs  pubmed.rs  scholar.rs  semantic.rs  unpaywall.rs  zenodo.rs
tests/: cli.rs
tests/fixtures/: arxiv_search.xml  biorxiv_search.json  core_search.json  crossref_search.json  dblp_search.xml  doaj_search.json  europepmc_search.json  hal_search.json  medrxiv_search.json  openaire_search.json  openalex_search.json  pmc_efetch.xml  pmc_esearch.json  pubmed_efetch.xml  pubmed_search.json  scholar_search.html  semantic_search.json  unpaywall_lookup.json  zenodo_search.json
