[package]
name = "fastpaper-cli"
version = "0.1.0"
edition = "2024"
authors = ["Yee Zhang <yee.zhang@gmail.com>"]
license = "GPL-3.0"
description = "CLI tool for searching, downloading and reading academic papers"

[[bin]]
name = "fastpaper"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = "2"
scraper = "0.22"
quick-xml = { version = "0.37", features = ["serialize"] }

[dev-dependencies]
mockito = "1"
