[package]
name = "fastpaper-cli"
version = "0.1.0"
edition = "2024"
authors = ["Yee Zhang <yee.zhang@gmail.com>"]
license = "GPL-3.0"
description = "CLI tool for searching, downloading and reading academic papers"

[lib]
name = "fastpaper"
path = "src/lib.rs"

[[bin]]
name = "fastpaper"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
quick-xml = { version = "0.39.2", features = ["serialize"] }
scraper = "0.26.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = "3"

[dev-dependencies]
assert_cmd = "2.2.0"
mockito = "1"
predicates = "3.1.4"
