[package]
name = "fastpaper-cli"
version = "0.1.0"
edition = "2024"
authors = ["Yee Zhang <yee.zhang@gmail.com>"]
license = "GPL-3.0"
description = "CLI tool for searching, downloading and reading academic papers"
repository = "https://github.com/zhangyee/fastpaper-cli"

[lib]
name = "fastpaper"
path = "src/lib.rs"

[[bin]]
name = "fastpaper"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
pdf_oxide = "0.3.17"
quick-xml = { version = "0.39.2", features = ["serialize"] }
scraper = "0.26.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = "3"

[dev-dependencies]
assert_cmd = "2.2.0"
mockito = "1"
predicates = "3.1.4"
serial_test = "3.4.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
